--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header-container">
            <a href="#" class="logo-link">
-                <img alt="KKR" src="./images/logo.png" />
+                <img alt="KKR" src="./logo.png" />
             </a>
             <nav>
                 <ul class="nav-list">
@@ -28,7 +28,7 @@
 
 <main>
     <div>
-        <img class="img1" src="./images/4.jpg"/>
+        <img class="img1" src="./4.jpg"/>
     </div>
     <div class="text_1">
         <h2 class="title_1">Карапетян Кристина Размиковна</h2>
@@ -38,7 +38,7 @@
         <p> А теперь в университете, который стал вторым домом для неё, Кристина Размиковна организует второй дом для нас! И у неё это получается</p>
     </div>
     <div>
-        <img class="img1" src="./images/5.jpg"/>
+        <img class="img1" src="./5.jpg"/>
     </div>
     <div class="text_1">
         <h2 class="title_1">Что отличает Кристину Размиковну от других преподавателей? </h2>
@@ -46,7 +46,7 @@
         <p> Она стала для нас настоящим наставником в студенческий мир! Благодаря её чувству юмора и открытости, а также готовности всегда прийти на помощь, посещение её пар стало нечто большим, чем учёба, а превратилось в увлекательное путешествие по юридическим и информационным основам</p>
         </div>
         <div>
-            <img class="img1" src="./images/2.jpg"/>
+            <img class="img1" src="./2.jpg"/>
         </div>
         <div class="text_1">
             <h2 class="title_1">P.S.</h2>
@@ -57,8 +57,8 @@
 
         <hr class="line"></hr>
         <div class="foto">
-            <img class="img2" src="./images/7.jpg"/>
-            <img class="img2" src="./images/6.jpg"/>
+            <img class="img2" src="./7.jpg"/>
+            <img class="img2" src="./6.jpg"/>
         </div>
         <h3>Студентки СА-201 с любовью</h3>
 </main>
@@ -66,7 +66,7 @@
     <footer>
         <div class="footer-content">
             <a class="footer__logo-link" href="#">
-                <img alt="KKR" src="./images/logo.png" class="footer__logo-image" />
+                <img alt="KKR" src="./logo.png" class="footer__logo-image" />
             </a>
             <nav>
                 <ul class="nav-list">
